@@ -35,9 +35,6 @@ python \- an interpreted, interactive, object-oriented programming language
 .B \-S
 ]
 [
-.B \-t
-]
-[
 .B \-u
 ]
 .br
@@ -143,11 +140,6 @@ Disable the import of the module
 and the site-dependent manipulations of
 .I sys.path
 that it entails.
-.TP
-.B \-t
-Issue a warning when a source file mixes tabs and spaces for
-indentation in a way that makes it depend on the worth of a tab
-expressed in spaces.  Issue an error when the option is given twice.
 .TP
 .B \-u
 Force stdin, stdout and stderr to be totally unbuffered.  On systems
